playing around with logic, creating a for loop to check the toppings, and spit them out to the user

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-md-8">
               <h4 class="well">Pizza Size: Personal, Small, Medium, Large, Extra Large<br><em> Staff pick: Extra Large!!</em></h4>
               <div class="form-group">
-              <select id="pizzaSize" class="pizzaSize" name="pizzaSize" type="text">
+              <select id="pizzaSize" class="pizzaSize well" name="pizzaSize" type="text">
                 <option value="1">Personal size: 8"</option>
                 <option value="2">Small: 10"</option>
                 <option value="3">Medium: 12"</option>
@@ -29,13 +29,26 @@
               </select>
               </div>
               <h4 class="well">Crust choices: White, O. Wheat, O. Sourdough, Flatbread, GF!<br><em> Staff pick: Sourdough!!</em></h4>
-              <select id="pizzaCrustType" class="pizzaCrustType" name="pizzaCrustType" type="text">
+              <select id="pizzaCrustType" class="pizzaCrustType well" name="pizzaCrustType" type="text">
                 <option value="1">White</option>
                 <option value="2">Organic Wheat</option>
                 <option value="3">Organic sourdough</option>
                 <option value="4">Flatbread</option>
                 <option value="5">Gluten Free</option>
               </select>
+              <div class="form-group">
+                <div class="well">
+                  <h4 class="">Topping Choices!<br><em> Staff pick: Anchovies!!</em></h4>
+                  <label class="topping" id="roma"><input type="checkbox" value="1">Red Roma Tomatoes and Ricotta</label>
+                  <label class="topping" id="anchovy"><input type="checkbox" value="2">Fresh Anchovies</label>
+                  <label class="topping" id="bacon"><input type="checkbox" value="3">Bacon</label>
+                  <label class="topping" id="roni"><input type="checkbox" value="4">Organic Pepperoni</label>
+                  <label class="topping" id="garlic"><input type="checkbox" value="5">Fresh Roasted Garlic</label>
+                  <label class="topping" id="sausage"><input type="checkbox" value="6">Organic Sausage</label>
+                  <label class="topping" id="pepper"><input type="checkbox" value="7">Organic Peppers</label>
+                  <label class="topping" id="mushroom"><input type="checkbox" value="8">Organic Mushrooms</label>
+                </div>
+              </div>
             </div>
           </div>
       </div>
