--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@
         <form id="formInput">
           <div class="row">
             <div class="col-md-8">
-              <h4 class="well">Pizza Size: Personal, Small, Medium, Large, Extra Large<br><em> Staff pick: Extra Large!!</em></h4>
+              <h4 class="well">Pizza Size: Personal, Small, Medium, Large<br><em> Staff pick: Large!!</em></h4>
               <div class="form-group">
               <select id="pizzaSize" class="pizzaSize well" name="pizzaSize" type="text">
-                <option value="1">Personal size: 8"</option>
-                <option value="2">Small: 10"</option>
-                <option value="3">Medium: 12"</option>
-                <option value="4">Large: 14"</option>
-                <option value="5">Extra Large: 16"</option>
+                <option value="personal">Personal size: 8"</option>
+                <option value="small">Small: 10"</option>
+                <option value="medium">Medium: 12"</option>
+                <option value="large">Large: 14"</option>
               </select>
               </div>
-              <h4 class="well">Crust choices: White, O. Wheat, O. Sourdough, Flatbread, GF!<br><em> Staff pick: Sourdough!!</em></h4>
+              <h4 class="well">Crust choices: White, O. Wheat, O. Sourdough, and GF!<br><em> Staff pick: Sourdough!!</em></h4>
               <select id="pizzaCrustType" class="pizzaCrustType well" name="pizzaCrustType" type="text">
-                <option value="1">White</option>
-                <option value="2">Organic Wheat</option>
-                <option value="3">Organic sourdough</option>
-                <option value="4">Flatbread</option>
-                <option value="5">Gluten Free</option>
+                <option value="white">White</option>
+                <option value="wheat">Organic Wheat</option>
+                <option value="sourdough">Organic sourdough</option>
+                <option value="glutenFree">Gluten Free</option>
               </select>
               <div class="form-group">
                 <div class="well">
