typo not letting me connect pizza sizes, fixed now

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               </select>
               <div class="form-group">
                 <div class="well">
-                  <h4 class="">Topping Choices!<br><em> Staff pick: Anchovies!!</em></h4>
-                  <label class="topping" id="roma">$1 each!<input type="checkbox" value="Tomatoes" name="toppings1">Red Roma Tomatoes and Ricotta</label>
+                  <h4>Topping Choices!<br><em> Staff pick: Anchovies!!</em></h4>
+                  <label class="topping" id="roma">All included in the order for free!<input type="checkbox" value="Tomatoes" name="toppings1">Red Roma Tomatoes and Ricotta</label>
                   <label class="topping" id="anchovy"><input type="checkbox" value="Anchovies" name="toppings1">Fresh Anchovies</label>
                   <label class="topping" id="bacon"><input type="checkbox" value="Bacon" name="toppings1">Bacon</label>
                   <label class="topping" id="roni"><input type="checkbox" value="Peperoni" name="toppings1">Organic Pepperoni</label>
