--- a/index.html
+++ b/index.html
@@ -27,13 +27,24 @@
                 <option value="large">Large: 14"</option>
               </select>
               </div>
-              <h4 class="well">Crust choices: White, O. Wheat, O. Sourdough, and GF!<br><em> Staff pick: Sourdough!!</em></h4>
-              <select id="pizzaCrustType" class="pizzaCrustType well" name="pizzaCrustType" type="text">
-                <option value="white">White</option>
-                <option value="wheat">Organic Wheat</option>
-                <option value="sourdough">Organic sourdough</option>
-                <option value="glutenFree">Gluten Free</option>
-              </select>
+              <div>
+                <h4 class="well">Crust choices: O. White, O. Wheat, O. Sourdough, and GF!<br><em> Staff pick: Sourdough!!</em></h4>
+                <select id="pizzaCrustType" class="pizzaCrustType well" name="pizzaCrustType" type="text">
+                  <option value="white">White</option>
+                  <option value="wheat">Organic Wheat</option>
+                  <option value="sourdough">Organic sourdough</option>
+                  <option value="glutenFree">Gluten Free</option>
+                </select>
+              </div>
+              <div>
+                <h4 class="well">Toppings premade to - way better than individual toppings!<br><em> Staff pick: Maui Wowi!!</em></h4>
+                <select id="premade" class="premade well" name="premade" type="text">
+                  <option value="maui">The Maui Wowi! Hawaiian bacon and pineapple</option>
+                  <option value="italian">The Itailian - sausages, peporini, meatballs, bacon</option>
+                  <option value="house">The house special, we put it all on there and then some, just depends on which night it is!</option>
+                  <option value="veg">Veggie Monster, artichokes, broccoli, kale, spinnach, lettuce, mushroom, carrots, corn<option>
+                </select>
+              </div>
               <div class="form-group">
                 <div class="well">
                   <h4>Topping Choices!<br><em> Staff pick: Anchovies!!</em></h4>
@@ -55,11 +66,11 @@
             <button type="submit" name="finishOrder" class="btn well" id="orderFinish" value="finishOrder">Click here to submit your order</button>
           </div>
         </form>
-          <div class="col-xs-6">
+          <div class="col-xs-6 well">
            <h3>Pizza order:</h3>
            <div id="pizzaShow">
            <h5></h5>
-           <p>Toppings: <span id="toppings"></span></p>
+           <p>Thank you! <span id="toppings"></span></p>
           </div>
         </div>
   </body>
