fix issues with logic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts2.js"></script>
     <title>Pizza My Heart</title>
   </head>
   <body background='http://discounthwf.com/image/cache/data/bamboo-cherry_vertical-325x325.jpg' id="backgroundImage">
@@ -36,7 +36,7 @@
                   <option value="glutenFree">Gluten Free</option>
                 </select>
               </div>
-              <div>
+              <!-- <div>
                 <h4 class="well">Toppings premade to - way better than individual toppings!<br><em> Staff pick: Maui Wowi!!</em></h4>
                 <select id="premade" class="premade well" name="premade" type="text">
                   <option value="maui">The Maui Wowi! Hawaiian bacon and pineapple</option>
@@ -44,17 +44,17 @@
                   <option value="house">The house special, we put it all on there and then some, just depends on which night it is!</option>
                   <option value="veg">Veggie Monster, artichokes, broccoli, kale, spinnach, lettuce, mushroom, carrots, corn<option>
                 </select>
-              </div>
+              </div> -->
               <div class="form-group">
                 <div class="well">
                   <h4>Topping Choices!<br><em> Staff pick: Anchovies!!</em></h4>
-                  <label class="topping" id="roma">All included in the order for free!<input type="checkbox" value="Tomatoes" name="toppings1">Red Roma Tomatoes and Ricotta</label>
+                  <label class="topping" id="roma">All cost 1$ each, and first one is free!<input type="checkbox" value="Tomatoes" name="toppings1">Red Roma Tomatoes and Ricotta</label>
                   <label class="topping" id="anchovy"><input type="checkbox" value="Anchovies" name="toppings1">Fresh Anchovies</label>
                   <label class="topping" id="bacon"><input type="checkbox" value="Bacon" name="toppings1">Bacon</label>
                   <label class="topping" id="roni"><input type="checkbox" value="Peperoni" name="toppings1">Organic Pepperoni</label>
                   <label class="topping" id="garlic"><input type="checkbox" value="Garlic" name="toppings1">Fresh Roasted Garlic</label>
                   <label class="topping" id="sausage"><input type="checkbox" value="Sausage" name="toppings1">Organic Sausage</label>
-                  <label class="topping" id="pepper"><input type="checkbox" value="Peppers" name="Peppers">Organic Peppers</label>
+                  <label class="topping" id="pepper"><input type="checkbox" value="Peppers" name="toppings1">Organic Peppers</label>
                   <label class="topping" id="mushroom"><input type="checkbox" value="Mushrooms" name="toppings1">Organic Mushrooms</label>
                 </div>
               </div>
